course-work/Implementations/Bike Shop/force-app/main/default/objects/Bike_Rental__c/Bike_Rental__c.object-meta.xml
<CustomObject>
    <label>Bike Rental</label>
    <nameField>
        <displayFormat>REN-{0000}</displayFormat>
        <label>Rental Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bike Rentals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>