course-work/Implementations/Bike Shop/force-app/main/default/objects/Bike_Rental__c/fields/Bike__c.field-meta.xml
<CustomField>
    <fullName>Bike__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bike</label>
    <referenceTo>Bike__c</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>