course-work/Implementations/Bike Shop/force-app/main/default/objects/Bike_Rental__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Customer Rentals</relationshipLabel>
    <relationshipName>CustomerRentals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>