course-work/Implementations/Bike Shop/force-app/main/default/objects/Bike_Rental__c/fields/Daily_Price__c.field-meta.xml
<CustomField>
    <fullName>Daily_Price__c</fullName>
    <label>Daily Price</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>